--- a/AUTHORS
+++ b/AUTHORS
@@ -2,7 +2,8 @@ If you have contributed to this project, you deserve to be in this file.
 
 The following people contributed to this project:
 
-Robert Biro (DarthJDG)
+Robert Biro (@DarthJDG)
 Bazmega Kapa
 Varga Bence
 anemgyenge
+Gergely Daróczi (@daroczig)
